# xrdp

./: .cirrus.yml  Makefile.am  configure.ac
.github/workflows/: build.yml
common/: Makefile.am  file.c  log.c  log.h  ms-erref.h  ms-rdpesc.h  os_calls.c  os_calls.h  scancode.c  scancode.h  trans.c  trans.h  xrdp_sockets.h
docs/man/: Makefile.am  sesman.ini.5.in  xrdp-sesadmin.8.in
fontdump/: fontdump.c
genkeymap/: genkeymap.c
instfiles/: Makefile.am  km-00000406.toml  km-00000407.toml  km-00000409.toml  km-0000040a.toml  km-0000040b.toml  km-0000040c.toml  km-00000410.toml  km-00000411.toml  km-00000412.toml  km-00000414.toml  km-00000415.toml  km-00000416.toml  km-00000419.toml  km-0000041d.toml  km-00000807.toml  km-00000809.toml  km-0000080a.toml  km-0000080c.toml  km-00000813.toml  km-00000816.toml  km-0000100c.toml  km-00010409.toml  km-19360409.toml
instfiles/apparmor.d/: Makefile.am  usr.sbin.xrdp  usr.sbin.xrdp-sesman
libxrdp/: xrdp_sec.c
m4/: axrdp.m4
scripts/: install_xrdp_build_dependencies_with_apt.sh
sesman/: Makefile.am  config.c  config.h  lock_uds.c  scp.c  scp.h  scp_v0.c  scp_v0.h  scp_v1.c  scp_v1_mng.c  sesman.c  sesman.h  sesman.ini.in  session.c  session.h  session_leader.c  session_leader.h  session_leader_api.c  session_leader_api.h  xak.c  xak.h
sesman/chansrv/: Makefile.am  chansrv_config.c  chansrv_config.h  chansrv_fuse.c  chansrv_xfs.c  clipboard_file.c  devredir.c  devredir.h  irp.c  irp.h  ms-erref.h  smartcard.c  smartcard.h  smartcard_data.c  smartcard_data.h  smartcard_dummy.c  smartcard_pcsc.c  smartcard_pcsc.h
sesman/chansrv/pcsc/: Makefile.am  xrdp_pcsc.c  xrdp_pcsc.h
sesman/libscp/: Makefile.am  libscp_connection.c  libscp_connection.h  libscp_init.c  libscp_init.h  libscp_session.c  libscp_session.h  libscp_tcp.c  libscp_tcp.h  libscp_types.h  libscp_v0.c  libscp_v0.h  (+7 more)
xrdp/: Makefile.am  lang.c  xrdp.c  xrdp_bitmap_load.c  xrdp_font.c  xrdp_listen.c  xrdp_login_wnd.c  xrdp_mm.c  xrdp_types.h  xrdp_wm.c  xrdpwin.c
xup/: xup.c
(+13 files in other folders)
